Final update of version 2

--- a/content/404.md
+++ b/content/404.md
@@ -6,6 +6,6 @@ Robots: noindex,nofollow
 Error 404
 =========
 
-Hoppsan! Du har knappat in en sida som inte existerar.
+Hoppsan! Du har knappat in en sida som inte existerar ännu.
 
 Get back <a href="%base_url%?">home</a></td>
